--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,16 @@
-/node_modules/
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# dotenv environment variable files
+.env
+.env.*
+!.env.example
